# binoculars

./: .gitignore  .gitmodules  CMakeLists.txt  EXP.md  Makefile  README.md  demo.ipynb  mont.ipynb  mont.py  poc.ipynb  requirements.txt  runner.py  utils.py
config/: tracer.tinfo
expected/coffeelake/: contention-alias.txt  contention-noalias-nosameline.txt  contention-noalias-sameline.txt
expected/haswell-ep/: contention-alias.txt  contention-noalias-nosameline.txt  contention-noalias-sameline.txt
expected/skylake-x/: README.md  contention-alias.txt  contention-noalias-nosameline.txt  contention-noalias-sameline.txt
include/: utils.h
ossl/: data  private.pem
pin/: makefile.rules  memtrace.cpp
src/: CMakeLists.txt  bino.c  kaslr.c  mont.c  mont.h
